--- a/index.html
+++ b/index.html
@@ -52,11 +52,20 @@
 </nav>
 
 
+
+<div class = "hero" id = "hero">
+  
+
+  </div>
+
+</div>
+
 <section class = "overall-div">
+ 
   <h1 class = "text-center logo" >
     Welcome to the News Room
   </h1><br>
-  
+ 
   <div id = "show-bottom-image">
     <div class="container-fluid">
       <div class="row">
