--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
   <div id = "show-bottom-image">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-md-4 col-lg-4 col-sm-12 col-xs-12" id = "news-bottom"></div>
-        <div class="col-md-4 col-lg-4 col-sm-12 col-xs-12" id = "news-middle"></div>
+        <div class="col-md-4 col-lg-4 col-sm-12 col-xs-12" id = "news-bottom"></div><br>
+        <div class="col-md-4 col-lg-4 col-sm-12 col-xs-12" id = "news-middle"></div><br>
         <div class="col-md-4 col-lg-4 col-sm-12 col-xs-12" id = "news-top"></div>
       </div>
     </div>
-  </div><br><br><br><br><br>
+  </div><br><br><br><br>
   
   <div class="show-news container-fluid ">
     <div class="row">
@@ -126,7 +126,7 @@
           </div>
         </div>    
       </div>
-      <div class="col-xs-12 col-md-6 col-lg-6">
+      <div class="col-xs-12 col-md-6 col-lg-6 ">
         <div class = "left-card" id = "left-card"></div>       
       </div>
     </div>
