fixed margins and added footer

--- a/index.html
+++ b/index.html
@@ -151,12 +151,10 @@
           </div>
       </div>
       <div class ="container hours">
-          <h5><span>OPENING HOURS</span></h5>
-          <h6>
-              Mon - Fri: 6am - 10pm
-          </h6>
-          <h6>Sat - Sun: 8am - 8pm</h6>
-      </div><BR>
+          <h5><span>Contact Us</span></h5>
+          <h6>26, Roving Lane, Buckingham, U.K</h6>
+          <h6>Mon - Sun : 8am - 10pm</h6>
+      </div><br>
 
       <div class="copy">
         <h6>COPYRIGHT <span>News Room</span> | 2020 | ALL RIGHTS RESERVED.</span></h6>
