--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <a class="nav-link active" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Top Nigerian News</a>
+          <a class="nav-link" href="movies/movie.html">Movie Reviews</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Top U.S News</a>
@@ -59,8 +59,8 @@
   </div>
 </nav>
 
-<div class = "hero" id = "hero">
 
+<div class = "hero" id = "hero">
 </div>
 
 <section class = "overall-div">
