--- a/movies/movie.html
+++ b/movies/movie.html
@@ -64,7 +64,7 @@
 
     <section>
         <div class="container-fluid search-bar">
-                <h2 class = "text-light">Search For Your Favorite Movies....</h2><br>
+                <h3 class = "text-light text-center">Search For Your Favorite Movies....</h3><br>
                 <div>
                     <input class = "" id = "input" placeholder="Search...">
                     <i class="fas fa-search" id = "search"></i>
