--- a/movies/movie.html
+++ b/movies/movie.html
@@ -60,8 +60,6 @@
       </ul>
   </div>
 </nav>
-
-
     <section>
         <div class="container-fluid search-bar">
                 <h3 class = "text-light text-center">Search For Your Favorite Movies....</h3><br>
@@ -72,24 +70,8 @@
         </div>
     </section>
    
-
-    <div class = "show-movies" id = "show-movies">
-
-    </div>
+<div class = "show-movies" id = "show-movies"></div>
       
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     <script src = "movie.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
