--- a/books/books.html
+++ b/books/books.html
@@ -49,10 +49,10 @@
           <a class="nav-link active" href="../index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Movies Review</a>
+          <a class="nav-link" href="../movies/movie.html">Movies Review</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">N.Y Times Best Sellers</a>
+          <a class="nav-link" href="../books/books.html">N.Y Times Best Sellers</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Latest Articles</a>
