--- a/movies/movie.html
+++ b/movies/movie.html
@@ -29,7 +29,7 @@
 
 </head>
 
-<body class = "bg-secondary">
+<body class = "bg-light">
    <!-- Navigation -->
 <nav class = "navbar navbar-expand-md navbar-light bg-dark sticky-top">    
 	<div class= "navbar-brand">
@@ -49,10 +49,10 @@
           <a class="nav-link active" href="../index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Top Nigerian News</a>
+          <a class="nav-link" href="../movies/movie.html">Movie Reviews</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Top U.S News</a>
+          <a class="nav-link" href="../books/books.html">N.Y Times Best Sellers</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Latest Articles</a>
