--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
       </div><br>
 
       <div class="copy">
-        <h6>COPYRIGHT <span>News Room</span> | 2020 | ALL RIGHTS RESERVED.</span></h6>
+        <h6>COPYRIGHT <span>News Room</span>..ALL RIGHTS RESERVED.</span></h6>
+        <h5>Yahaya Kehinde 2020</h5><br>
       </div>      
   </footer>
 
