--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <a class="nav-link" href="movies/movie.html">Movie Reviews</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">N.Y Times Best-Sellers</a>
+          <a class="nav-link" href="books/books.html">N.Y Times Best-Sellers</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Latest Articles</a>
