--- a/books/books.html
+++ b/books/books.html
@@ -68,6 +68,36 @@
 </div>
 
 <div class = "show-books" id = "show-books"></div>
+
+<footer class = 'bg-dark'>
+  <div class="email-footer">
+          <input type="text" placeholder="Email Address">
+          <button>SUBSCRIBE</button>
+      </div>
+      <div class = "container">
+          <div class="social ">
+              <div>
+                  <p><span>SOCIAL MEDIA LINKS</span></p>
+              </div>
+              <div>
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-linkedin"></i>
+                <i class="fab fa-instagram"></i>
+              </div>
+          </div>
+      </div>
+      <div class ="container hours">
+          <h5><span>Contact Us</span></h5>
+          <h6>26, Roving Lane, Buckingham, U.K</h6>
+          <h6>Mon - Sun : 8am - 10pm</h6>
+      </div><br>
+
+      <div class="copy">
+        <h6>COPYRIGHT <span>News Room</span>..ALL RIGHTS RESERVED.</span></h6>
+        <h5>Yahaya Kehinde 2020</h5><br>
+      </div>      
+  </footer>
       
 
     <script src = "movie.js"></script>
